# robot-dog-software

controller/: .clang_complete  .gitignore  Makefile
controller/include/: bst_bn055.h  buzzer.h  delay.h  ik.h  main.h  math.h  servo.h  ssfp_usart.h  sysclk.h
controller/source/: buzzer.c  delay.c  ik.c  main.c  servo.c  ssfp_usart.c  sysclk.c
driver/: Makefile  meson.build
driver/include/: main.hpp
driver/source/: main.cc
python/: main.py
python/gui/: ControlPanel.py
python/gui/widgets/: GLPreview.py
raspberry/: CMakeLists.txt
raspberry/include/: GroundPlane.h  Program.h  main.h
raspberry/shaders/ground-plane/: fragment.glsl  vertex.glsl
raspberry/source/: GroundPlane.cc  Program.cc  main.cc
server/: .clang_complete  .gitignore  main.c  main.cc  meson.build
server/inc/: control.h  logger.h  ssfp_usart.h
server/src/: control.cc  meson.build  ssfp_usart.c
shared/include/: ssfp.h  ssfp_management.h  ssfp_ports.h  ssfp_servo.h
shared/source/: ssfp.c  ssfp_management.c
