CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(raspberry VERSION 1.0)

FILE(GLOB_RECURSE SOURCES source/*)

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(glfw3 3.3 REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)

ADD_EXECUTABLE(
    main.elf

    ${SOURCES}
)

TARGET_INCLUDE_DIRECTORIES(main.elf PUBLIC include)
TARGET_LINK_LIBRARIES(main.elf OpenGL::GL)
TARGET_LINK_LIBRARIES(main.elf glfw)
TARGET_LINK_LIBRARIES(main.elf GLEW)